--- a/css/styles.css
+++ b/css/styles.css
@@ -39,16 +39,17 @@ body {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
-  row-gap: 20px;
+  row-gap: 24px;
   align-items: center;
   justify-content: center;
   max-width: 1128px;
   margin: 24px 156px;
 }
 
-.gallery > li {
-  flex: 1 1 calc((100% - 48px) / 3);
+.gallery-image {
+  width: 360px;
 }
-.gallery > li > img {
-  width: 100%;
+
+.gallery-image:hover {
+  cursor: pointer;
 }
